# rust_rt

./: .gitignore  Cargo.toml  LICENSE
scene/: cornell.xml
src/: aabb.rs  bvh.rs  camera.rs  hittable.rs  main.rs  materials.rs  math.rs  objects.rs  onb.rs  perlin.rs  ray.rs  scene.rs  textures.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs  mtl.rs
src/math/: aabb.rs  mod.rs  vec.rs
src/objects/: cone.rs  constant_medium.rs  cube.rs  cylinder.rs  flip_face.rs  mod.rs  moving_sphere.rs  obj.rs  rect.rs  rotate.rs  sphere.rs  stl.rs  translate.rs  triangle.rs  wavefront.rs
src/pdf/: cosine_pdf.rs  hittable_pdf.rs  mixture_pdf.rs  mod.rs
src/textures/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  solid_color.rs  textures.rs
