[package]
name = "raytracer"
version = "0.1.0"
edition = "2018"
authors = ["acazuc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rand = "0.8.4"
rayon = "1.5"
indicatif = "0.16"
wavefront_obj = "10.0"
nom_stl = "0.2"
roxmltree = "0.14"
show-image = "0.6"
